# SQLCyCli

./: LICENSE  MANIFEST.in  README.md  requirements.txt  requirements_dev.txt  setup.cfg  setup.py
.github/workflows/: release.yml
src/: benchmark.py  examples.py  test.py  test_aio.py  test_pool.py  test_sqlfunc.py
src/sqlcycli/: __init__.py  _auth.pxd  _auth.py  _auth.pyi  _connect.pxd  _connect.py  _optionfile.pxd  _optionfile.py  _optionfile.pyi  _ssl.pxd  _ssl.py  _ssl.pyi  charset.pxd  charset.py  charset.pyi  connection.pxd  connection.py  connection.pyi  errors.pxd  errors.py  protocol.pxd  protocol.py  sqlfunc.pxd  sqlfunc.py  sqlfunc.pyi  sqlintvl.pxd  sqlintvl.py  sqlintvl.pyi  transcode.pxd  transcode.py  transcode.pyi  typeref.pxd  typeref.py  utils.pxd  utils.py  utils.pyi
src/sqlcycli/aio/: __init__.py  connection.pxd  connection.py  connection.pyi  pool.pxd  pool.py  pool.pyi
src/sqlcycli/constants/: FIELD_TYPE.py  _CLIENT.pxd  _CLIENT.py  _COMMAND.pxd  _COMMAND.py  _FIELD_TYPE.pxd  _FIELD_TYPE.py  _SERVER_STATUS.pxd  _SERVER_STATUS.py
src/test_data/: my.cnf
