[metadata]
name = sqlcycli
version = 1.0.1
author = Jiefu Chen
author_email = keppa1991@163.com
description = Sync and Async MySQL driver build in Cython.
url = https://github.com/AresJef/SQLCyCli
long_description = file: README.md
long_description_content_type = text/markdown
keywords = mysql, mariadb, asyncio, aiomysql, pymysql
license = MIT license
classifiers =
    Programming Language :: Python :: 3
    Operating System :: Unix
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows

[options]
zip_safe = False
include_package_data = True
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =
    cytimes>=1.0.3
    numpy>=1.25.2
    orjson>=3.10.2
    pandas>=2.1.0
    mysqlclient>=2.2.0
    
[options.packages.find]
where = src

[build_ext]
inplace=1